# HDR

./: .gitignore  README.md  pyproject.toml  tonemapping.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI.yaml
HDR/: main_nicegui.py  main_qt.py
docs/: HDR.rst  conf.py  index.rst
images/reduced/scene_1/: hdr_image_list.txt
output/saved/scene_1_reduced/: output_hdr.hdr
scripts/: create_hdr.py  create_hdr_memorial.py  create_hdr_png.py  create_hdr_supop.py  debevec.py  example_hdr.py  output_hdr.hdr  plot_false_color_luminance.py  reduce_images.py
scripts/create_hdr/: create_hdr.py  debevec.py  plot_false_color_luminance.py  reduce_images.py
scripts/tonemaping/: tonemapping.py
scripts/tonemapping/: tonemapping.py
test_HDR/: basic_test.py
