[project]
name = "HDR"
version = "0.1.0"
description = ""

authors = [
    { name = "Clemence Bouedo"},
    { name = " Victor Minot"},

]
requires-python = ">=3.10, <3.14"
readme = "README.md"
dependencies = [
    "pandas[parquet]>=2,<3",
    "nicegui[native]>=2,<3",
    "pyside6",
    "numpy>=1.20,<3",
    "matplotlib>=3.5,<4",
    "imageio>=2.31,<3",
    "opencv-python>=4.5,<5"
]


[project.scripts]
reduce_images = "scripts.create_hdr.reduce_images:reduce_images"
false_color = "scripts.create_hdr.plot_false_color_luminance:main"
create_hdr = "scripts.create_hdr.create_hdr:create_hdr"
tonemapping = "scripts.tonemapping.tonemapping:main"

[dependency-groups]
test = [
    "pytest",
    "coverage",
    "pandas-stubs",
    "pytest-sugar",
]
docs = [
    "Sphinx",
    "pydata-sphinx-theme",
    "myst-parser",
    "jupyter",
    "nbsphinx",
    "sphinx-copybutton",
    "sphinx-autobuild",
    "ipython",
    "sphinx-favicon",
    "sphinx-argparse",
]

[tool.uv]
default-groups = [
    "test",
    "docs",
]

[tool.hatch.build.targets.sdist]
include = ["scripts"]

[tool.hatch.build.targets.wheel]
include = ["scripts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pydoclint]
style = 'google'
arg-type-hints-in-docstring = false
skip-checking-raises = true
allow-init-docstring = true
check-return-types = false
check-yield-types = false

[tool.pytest.ini_options]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]
addopts = "--import-mode=importlib --doctest-modules"
testpaths = ["test_HDR", "HDR"]

[tool.coverage.run]
source = ["HDR"]
